assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: feature
    7             | feature_list feature

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID ':' TYPEID opt_init_expr

   10 formal_list: /* empty */
   11            | non_nil_formal_list

   12 non_nil_formal_list: formal
   13                    | non_nil_formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expression: OBJECTID ASSIGN expression
   16           | expression '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression '.' OBJECTID '(' parameters ')'
   18           | OBJECTID '(' parameters ')'
   19           | IF expression THEN expression ELSE expression FI
   20           | WHILE expression LOOP expression POOL
   21           | '{' semi_expression_list '}'
   22           | LET OBJECTID ':' TYPEID opt_init_expr let_expr
   23           | CASE expression OF case_list ESAC
   24           | NEW TYPEID
   25           | ISVOID expression
   26           | expression '+' expression
   27           | expression '-' expression
   28           | expression '*' expression
   29           | expression '/' expression
   30           | '~' expression
   31           | expression LE expression
   32           | expression '<' expression
   33           | expression '=' expression
   34           | NOT expression
   35           | '(' expression ')'
   36           | OBJECTID
   37           | INT_CONST
   38           | STR_CONST
   39           | BOOL_CONST

   40 parameters: /* empty */
   41           | non_nil_parameters

   42 non_nil_parameters: expression
   43                   | non_nil_parameters ',' expression

   44 semi_expression_list: expression
   45                     | semi_expression_list ':' expression

   46 case_list: case
   47          | case_list case

   48 case: OBJECTID ':' TYPEID DARROW expression ';'

   49 opt_init_expr: /* empty */
   50              | ASSIGN expression

   51 let_expr: IN expression
   52         | OBJECTID ':' TYPEID opt_init_expr let_expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 16 17 18 35
')' (41) 8 16 17 18 35
'*' (42) 28
'+' (43) 26
',' (44) 13 43
'-' (45) 27
'.' (46) 16 17
'/' (47) 29
':' (58) 8 9 14 22 45 48 52
';' (59) 4 5 48
'<' (60) 32
'=' (61) 33
'@' (64) 16
'{' (123) 4 5 8 21
'}' (125) 4 5 8 21
'~' (126) 30
error (256)
CLASS (258) 4 5
ELSE (259) 19
FI (260) 19
IF (261) 19
IN (262) 51
INHERITS (263) 5
LET (264) 22
LOOP (265) 20
POOL (266) 20
THEN (267) 19
WHILE (268) 20
CASE (269) 23
ESAC (270) 23
OF (271) 23
DARROW (272) 48
NEW (273) 24
ISVOID (274) 25
STR_CONST (275) 38
INT_CONST (276) 37
BOOL_CONST (277) 39
TYPEID (278) 4 5 8 9 14 16 22 24 48 52
OBJECTID (279) 8 9 14 15 16 17 18 22 36 48 52
ASSIGN (280) 15 50
NOT (281) 34
LE (282) 31
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
feature_list (49)
    on left: 6 7, on right: 4 5 7
feature (50)
    on left: 8 9, on right: 6 7
formal_list (51)
    on left: 10 11, on right: 8
non_nil_formal_list (52)
    on left: 12 13, on right: 11 13
formal (53)
    on left: 14, on right: 12 13
expression (54)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39, on right: 8 15 16 17 19 20 23 25 26 27 28
    29 30 31 32 33 34 35 42 43 44 45 48 50 51
parameters (55)
    on left: 40 41, on right: 16 17 18
non_nil_parameters (56)
    on left: 42 43, on right: 41 43
semi_expression_list (57)
    on left: 44 45, on right: 21 45
case_list (58)
    on left: 46 47, on right: 23 47
case (59)
    on left: 48, on right: 46 47
opt_init_expr (60)
    on left: 49 50, on right: 9 22 52
let_expr (61)
    on left: 51 52, on right: 22 52


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    feature_list  go to state 12
    feature       go to state 13


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


state 11

    8 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID . ':' TYPEID opt_init_expr

    '('  shift, and go to state 15
    ':'  shift, and go to state 16


state 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 17

    feature  go to state 18


state 13

    6 feature_list: feature .

    $default  reduce using rule 6 (feature_list)


state 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    feature_list  go to state 19
    feature       go to state 13


state 15

    8 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 20

    $default  reduce using rule 10 (formal_list)

    formal_list          go to state 21
    non_nil_formal_list  go to state 22
    formal               go to state 23


state 16

    9 feature: OBJECTID ':' . TYPEID opt_init_expr

    TYPEID  shift, and go to state 24


state 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 25


state 18

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


state 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 26

    feature  go to state 18


state 20

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


state 21

    8 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 28


state 22

   11 formal_list: non_nil_formal_list .
   13 non_nil_formal_list: non_nil_formal_list . ',' formal

    ','  shift, and go to state 29

    $default  reduce using rule 11 (formal_list)


state 23

   12 non_nil_formal_list: formal .

    $default  reduce using rule 12 (non_nil_formal_list)


state 24

    9 feature: OBJECTID ':' TYPEID . opt_init_expr

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 49 (opt_init_expr)

    opt_init_expr  go to state 31


state 25

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 32


state 27

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 33


state 28

    8 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 34


state 29

   13 non_nil_formal_list: non_nil_formal_list ',' . formal

    OBJECTID  shift, and go to state 20

    formal  go to state 35


state 30

   50 opt_init_expr: ASSIGN . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 50


state 31

    9 feature: OBJECTID ':' TYPEID opt_init_expr .

    $default  reduce using rule 9 (feature)


state 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 33

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


state 34

    8 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 51


state 35

   13 non_nil_formal_list: non_nil_formal_list ',' formal .

    $default  reduce using rule 13 (non_nil_formal_list)


state 36

   19 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 52


state 37

   22 expression: LET . OBJECTID ':' TYPEID opt_init_expr let_expr

    OBJECTID  shift, and go to state 53


state 38

   20 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 54


state 39

   23 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 55


state 40

   24 expression: NEW . TYPEID

    TYPEID  shift, and go to state 56


state 41

   25 expression: ISVOID . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 57


state 42

   38 expression: STR_CONST .

    $default  reduce using rule 38 (expression)


state 43

   37 expression: INT_CONST .

    $default  reduce using rule 37 (expression)


state 44

   39 expression: BOOL_CONST .

    $default  reduce using rule 39 (expression)


state 45

   15 expression: OBJECTID . ASSIGN expression
   18           | OBJECTID . '(' parameters ')'
   36           | OBJECTID .

    ASSIGN  shift, and go to state 58
    '('     shift, and go to state 59

    $default  reduce using rule 36 (expression)


state 46

   34 expression: NOT . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 60


state 47

   30 expression: '~' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 61


state 48

   21 expression: '{' . semi_expression_list '}'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression            go to state 62
    semi_expression_list  go to state 63


state 49

   35 expression: '(' . expression ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 64


state 50

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression
   50 opt_init_expr: ASSIGN expression .

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 50 (opt_init_expr)


state 51

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 74


state 52

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   19           | IF expression . THEN expression ELSE expression FI
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression

    THEN  shift, and go to state 75
    LE    shift, and go to state 65
    '<'   shift, and go to state 66
    '='   shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '@'   shift, and go to state 72
    '.'   shift, and go to state 73


state 53

   22 expression: LET OBJECTID . ':' TYPEID opt_init_expr let_expr

    ':'  shift, and go to state 76


state 54

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   20           | WHILE expression . LOOP expression POOL
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression

    LOOP  shift, and go to state 77
    LE    shift, and go to state 65
    '<'   shift, and go to state 66
    '='   shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '@'   shift, and go to state 72
    '.'   shift, and go to state 73


state 55

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   23           | CASE expression . OF case_list ESAC
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression

    OF   shift, and go to state 78
    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73


state 56

   24 expression: NEW TYPEID .

    $default  reduce using rule 24 (expression)


state 57

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   25           | ISVOID expression .
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression

    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 25 (expression)


state 58

   15 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 79


state 59

   18 expression: OBJECTID '(' . parameters ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    $default  reduce using rule 40 (parameters)

    expression          go to state 80
    parameters          go to state 81
    non_nil_parameters  go to state 82


state 60

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression
   34           | NOT expression .

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 34 (expression)


state 61

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | '~' expression .
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression

    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 30 (expression)


state 62

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression
   44 semi_expression_list: expression .

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 44 (semi_expression_list)


state 63

   21 expression: '{' semi_expression_list . '}'
   45 semi_expression_list: semi_expression_list . ':' expression

    '}'  shift, and go to state 83
    ':'  shift, and go to state 84


state 64

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression
   35           | '(' expression . ')'

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73
    ')'  shift, and go to state 85


state 65

   31 expression: expression LE . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 86


state 66

   32 expression: expression '<' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 87


state 67

   33 expression: expression '=' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 88


state 68

   26 expression: expression '+' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 89


state 69

   27 expression: expression '-' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 90


state 70

   28 expression: expression '*' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 91


state 71

   29 expression: expression '/' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 92


state 72

   16 expression: expression '@' . TYPEID '.' OBJECTID '(' parameters ')'

    TYPEID  shift, and go to state 93


state 73

   17 expression: expression '.' . OBJECTID '(' parameters ')'

    OBJECTID  shift, and go to state 94


state 74

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 95


state 75

   19 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 96


state 76

   22 expression: LET OBJECTID ':' . TYPEID opt_init_expr let_expr

    TYPEID  shift, and go to state 97


state 77

   20 expression: WHILE expression LOOP . expression POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 98


state 78

   23 expression: CASE expression OF . case_list ESAC

    OBJECTID  shift, and go to state 99

    case_list  go to state 100
    case       go to state 101


state 79

   15 expression: OBJECTID ASSIGN expression .
   16           | expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 15 (expression)


state 80

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   33           | expression . '=' expression
   42 non_nil_parameters: expression .

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 42 (non_nil_parameters)


state 81

   18 expression: OBJECTID '(' parameters . ')'

    ')'  shift, and go to state 102


state 82

   41 parameters: non_nil_parameters .
   43 non_nil_parameters: non_nil_parameters . ',' expression

    ','  shift, and go to state 103

    $default  reduce using rule 41 (parameters)


state 83

   21 expression: '{' semi_expression_list '}' .

    $default  reduce using rule 21 (expression)


state 84

   45 semi_expression_list: semi_expression_list ':' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 104


state 85

   35 expression: '(' expression ')' .

    $default  reduce using rule 35 (expression)


state 86

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   31           | expression LE expression .
   32           | expression . '<' expression
   33           | expression . '=' expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 31 (expression)


state 87

   16 expression: expression . '@' TYPEID '.' OBJECTID '(' parameters ')'
   17           | expression . '.' OBJECTID '(' parameters ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . LE expression
   32           | expression . '<' expression
   32           | expression '<' expression .
   33           | expression . '=' expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 32 (expression)


state 88
